BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Suggestion_Feedback_vod__c.object
<CustomObject>
    <description>Captures information on user activity</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account that the Suggestion is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suggestion Feedback</relationshipLabel>
        <relationshipName>Suggestion_Feedback_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Execution_Type_vod__c</fullName>
        <description>Captures which channel is associated to Suggestion</description>
        <label>Activity Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call_Objective_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures user feedback when Call created from Suggestion is Submitted</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Suggestion Feedback</relationshipLabel>
        <relationshipName>Suggestion_Feedback_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Objective_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures user feedback when Call Objective from Suggestion is completed</description>
        <label>Call Objective</label>
        <referenceTo>Call_Objective_vod__c</referenceTo>
        <relationshipLabel>Suggestion Feedback</relationshipLabel>
        <relationshipName>Suggestion_Feedback_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DismissFeedback1_vod__c</fullName>
        <description>User defined question for feedback when &apos;Dismiss&apos; is selected</description>
        <label>Dismiss Feedback1</label>
        <picklist>
            <picklistValues>
                <fullName>True_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DismissFeedback2_vod__c</fullName>
        <description>User defined question for feedback when &apos;Dismiss&apos; is selected</description>
        <label>Dismiss Feedback2</label>
        <picklist>
            <picklistValues>
                <fullName>True_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DismissFeedback3_vod__c</fullName>
        <description>User defined question for feedback when &apos;Dismiss&apos; is selected</description>
        <label>Dismiss Feedback3</label>
        <picklist>
            <picklistValues>
                <fullName>True_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sent_Email_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures user feedback from Sent Email when email is sent from Suggested action</description>
        <label>Sent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Suggestion Feedback</relationshipLabel>
        <relationshipName>Suggestion_Feedback_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggestion_vod__c</fullName>
        <description>Used to associate feedback data to a suggestion</description>
        <label>Suggestion</label>
        <referenceTo>Suggestion_vod__c</referenceTo>
        <relationshipLabel>Suggestion Feedback</relationshipLabel>
        <relationshipName>Suggestion_Feedback_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Suggestion Feedback</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>Suggestion Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestion Feedback</pluralLabel>
    <recordTypes>
        <fullName>Activity_Execution_vod</fullName>
        <active>true</active>
        <description>Used for tracking User Suggestion execution</description>
        <label>Activity_Execution_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dismiss_vod</fullName>
        <active>true</active>
        <description>Used for tracking User Suggestion dismissal</description>
        <label>Dismiss_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mark_As_Complete_vod</fullName>
        <active>true</active>
        <description>Used for tracking User Suggestion completion outside of execution workflow</description>
        <label>Mark_As_Complete_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>